[package]
name = "redis-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
